fix: add padding to jukebox download button to prevent overlap with volume slider

--- a/blowcomotion/static/scss/_home-page.scss
+++ b/blowcomotion/static/scss/_home-page.scss
@@ -243,7 +243,8 @@
 
 .jp-download-btn-wrap {
   float: left;
-  padding-top: 20px;
+  padding-left: 12px;
+  padding-top: 25px;
 }
 
 .jp-download-btn {
